--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -5,7 +5,7 @@
 @import "branding";
 
 /**
- * ZeroPoint starter styling
+ * 11ty_11ty-zeropoint starter styling
 */
 body {
   color: var(--color-text);
