--- a/src/manifest.njk
+++ b/src/manifest.njk
@@ -3,8 +3,8 @@ permalink: '/manifest.webmanifest'
 eleventyExcludeFromCollections: true
 ---
 {
-  "name": "ZeroPoint",
-  "short_name": "ZeroPoint",
+  "name": "11ty_11ty-zeropoint",
+  "short_name": "11ty_11ty-zeropoint",
   "display": "standalone",
   "start_url": "/"
 }
